[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
store = { path = "../store" }
mpc = { path = "../mpc" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "offline"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
solana-sdk = "3.0.0"
log = "0.4.22"
env_logger = "0.11.4"
bcrypt = "0.17.1"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
actix-web-lab = "0.24.3"
